Remove fixed height setting on module image to improve spacing

--- a/ckanext/ckanext-apicatalog_ui/less/module.less
+++ b/ckanext/ckanext-apicatalog_ui/less/module.less
@@ -233,7 +233,6 @@
 .module-image {
   float: left;
   width: 50px;
-  height: 50px;
   line-height: @line-height-computed;
   text-align: center;
   margin-right: 15px;
